// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing on <CategoriesLayout/> It must render correctly with the grid and match with the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container justify-center flex-col items-center mb-16 css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container w-11/12 mt-5 mb-14 css-11lq3yg-MuiGrid-root"
        >
          <div
            class="flex mb-8 MuiBox-root css-0"
          >
            <div
              class="w-2 h-full bg-[#3483fa] mr-2 MuiBox-root css-0"
            />
            <h2
              class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
            >
              Title test
            </h2>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container justify-evenly gap-6 css-11lq3yg-MuiGrid-root"
          >
            test children
          </div>
        </div>
        <div
          class="grid grid-cols-2 gap-4 w-11/12 md:grid-cols-4 MuiBox-root css-0"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root col-span-2 md:row-span-2 css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
              >
                Title primary test
              </h5>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
              </p>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root flex col-span-2 css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
              >
                Title secondary test
              </h5>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
              </p>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
              >
                Title third test
              </h5>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
              </p>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
            >
              <h5
                class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
              >
                Title fourth test
              </h5>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container justify-center flex-col items-center mb-16 css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container w-11/12 mt-5 mb-14 css-11lq3yg-MuiGrid-root"
      >
        <div
          class="flex mb-8 MuiBox-root css-0"
        >
          <div
            class="w-2 h-full bg-[#3483fa] mr-2 MuiBox-root css-0"
          />
          <h2
            class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
          >
            Title test
          </h2>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container justify-evenly gap-6 css-11lq3yg-MuiGrid-root"
        >
          test children
        </div>
      </div>
      <div
        class="grid grid-cols-2 gap-4 w-11/12 md:grid-cols-4 MuiBox-root css-0"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root col-span-2 md:row-span-2 css-bhp9pd-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
          >
            <h5
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
            >
              Title primary test
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root flex col-span-2 css-bhp9pd-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
          >
            <h5
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
            >
              Title secondary test
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
          >
            <h5
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
            >
              Title third test
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
            </p>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
        >
          <div
            class="MuiCardContent-root flex flex-col justify-center css-46bh2p-MuiCardContent-root"
          >
            <h5
              class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
            >
              Title fourth test
            </h5>
            <p
              class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eligendi praesentium
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Testing on <CategoriesLayout/> should render correctly without including the grid and match with the snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiGrid-root MuiGrid-container justify-center flex-col items-center mb-16 css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container w-11/12 mt-5 mb-14 css-11lq3yg-MuiGrid-root"
        >
          <div
            class="flex mb-8 MuiBox-root css-0"
          >
            <div
              class="w-2 h-full bg-[#3483fa] mr-2 MuiBox-root css-0"
            />
            <h2
              class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
            >
              Title test
            </h2>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container justify-evenly gap-6 css-11lq3yg-MuiGrid-root"
          >
            test children
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiGrid-root MuiGrid-container justify-center flex-col items-center mb-16 css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container w-11/12 mt-5 mb-14 css-11lq3yg-MuiGrid-root"
      >
        <div
          class="flex mb-8 MuiBox-root css-0"
        >
          <div
            class="w-2 h-full bg-[#3483fa] mr-2 MuiBox-root css-0"
          />
          <h2
            class="MuiTypography-root MuiTypography-h3 css-gepadz-MuiTypography-root"
          >
            Title test
          </h2>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container justify-evenly gap-6 css-11lq3yg-MuiGrid-root"
        >
          test children
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
